<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register"
		android:textSize="25sp"
		android:textStyle="bold"
		android:layout_marginTop="15sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<EditText
		android:id="@+id/editText3"
		android:layout_width="200sp"
		android:layout_height="wrap_content"
		android:layout_marginTop="25sp"
		android:autofillHints="@null"
		android:hint="@string/first_name"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView"/>
	
	<EditText
		android:id="@+id/editText4"
		android:layout_width="200sp"
		android:layout_height="wrap_content"
		android:layout_marginTop="15sp"
		android:autofillHints="@null"
		android:hint="@string/last_name"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText3" />
	
	<EditText
		android:id="@+id/editText5"
		android:layout_width="200sp"
		android:layout_height="wrap_content"
		android:layout_marginTop="15sp"
		android:autofillHints="@null"
		android:hint="@string/username"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText4" />
	
	<EditText
		android:id="@+id/editText6"
		android:layout_width="200sp"
		android:layout_height="wrap_content"
		android:layout_marginTop="15sp"
		android:autofillHints="@null"
		android:hint="@string/password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText5" />
	
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register"
		android:layout_marginTop="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText6" />
</android.support.constraint.ConstraintLayout>