<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<ImageView
		android:id="@+id/imageView"
		android:layout_width="200sp"
		android:layout_height="200sp"
		android:layout_marginTop="75sp"
		android:src="@drawable/index"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:contentDescription="@null" />
	
	<EditText
		android:id="@+id/editText"
		android:layout_width="200sp"
		android:layout_height="wrap_content"
		android:layout_marginTop="35sp"
		android:autofillHints="@null"
		android:hint="@string/username"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView" />
	
	<EditText
		android:id="@+id/editText2"
		android:layout_width="200sp"
		android:layout_height="wrap_content"
		android:layout_marginTop="10sp"
		android:autofillHints="@null"
		android:hint="@string/password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText" />
	
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText2"
		android:layout_marginTop="25sp"/>
</android.support.constraint.ConstraintLayout>